--- a/Sprint3/faq.html
+++ b/Sprint3/faq.html
@@ -22,7 +22,7 @@
       <a href="login.html">Login</a>
       <a href="events.html">Events</a>
       <a href="projects.html">Projects</a>
-      <a href="contacts.html">Contact</a>
+      <a href="contact.html">Contact</a>
       <a href="faq.html">FAQ</a>
     </nav>
   </header>
